Don't use absolute path

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
-    <script src="/bundle.js"></script>
+    <script src="bundle.js"></script>
 </head>
 
 <body>
