--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
     <script src="bundle.js"></script>
+    <title>dérive.</title>
 </head>
 
 <body>
