Use safer title attribute

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="bundle.js"></script>
-    <title>dérive.</title>
+    <title>d&eacute;rive.</title>
 </head>
 
 <body>
