--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet-easybutton@2.0.0/src/easy-button.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<script src="https://unpkg.com/exif-js@2.2.1"></script>
+	<!-- <script src="https://unpkg.com/exif-js@2.2.1"></script> -->
     <script src="bundle.js"></script>
     <title>d&eacute;rive.</title>
 </head>
